--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "expo-server-sdk": "^3.6.0",
+    "firebase": "^9.1.2",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
@@ -52,6 +53,5 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0"
-  },
-  "proxy": "http://localhost:5000/"
+  }
 }
