firebase before downgrading

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "bootstrap": "^4.6.0",
     "expo-server-sdk": "^3.6.0",
     "firebase": "^9.1.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "react-toastify": "^8.0.3",
     "reactstrap": "^8.9.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.0.1"
